--- a/VRChat/00/1099900.html
+++ b/VRChat/00/1099900.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "t+0XmqNG1g/B4z7whUYi81UfR35k5SjH7a6w0A9rnl8="></script>
+    "4kiH65WUhRu2OYMzufxyTNGItZIZ/l/mVagERkcOfRU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"どこでも3D定規","description":"VRChat対応アイテム「どこでも3D定規」\n\n\nアバターの身長や、ワールドのオブジェクト等の大きさを\n簡単に測れるような定規を3種類ほど作成してみましたので、\nお好みのものをご利用ください。\n\n\nポリゴン数：合計1198\n2M定規細長「meter」：492\n1M定規細長「meter_1m」：378\n2M定規幅広「meter_2m」：328\n","url":"https://booth.pm/ja/items/1099900","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/a2bf9907-a323-492b-a7ce-a665215736f7/i/1099900/cc3f3a4e-19cc-47e3-9341-d13e8bdac80b_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="t+0XmqNG1g/B4z7whUYi81UfR35k5SjH7a6w0A9rnl8="></script>
+    nonce="4kiH65WUhRu2OYMzufxyTNGItZIZ/l/mVagERkcOfRU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,10 +160,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1099900/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              727
+                              729
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1099900/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              727
+                              729
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
