--- a/VRChat/19/1097419.html
+++ b/VRChat/19/1097419.html
@@ -71,9 +71,6 @@
     <script id="shoplist_with_items" type="text/x-template">
     <div><div class="l-cards-4cols l-cards-sp-2cols"><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" v-for="shop in visibleShops"></shop-with-items><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" closed="" v-for="shop in moreShops" v-if="moreShops &amp;&amp; moreShopsVisible"></shop-with-items></div><div @click="moreShopsVisible = true" class="ellip-btn" v-if="moreShops &amp;&amp; !moreShopsVisible">もっと見る<i class="icon-arrow-open-down s-2x no-margin"></i></div></div>
     </script>
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <div class="mini-player-controller" style="display: none;">
@@ -103,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "PdqvjjnszPvENUegE5zWa7nbeDts//tJ8x3E+CvyX1w="></script>
+    "glEFsAMHR9cPd36QsoxUkGiATpa3YFR+z9mdRYinZ+E="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル「ロップ」","description":"うさみみの女の子です。\nVRChatのアバターの他、動画・ゲーム等の作成に利用することができます。\nフルトラッキング対応です。\nアバター単体はVRChat上でひみこさん（ https://bbbbbhimiko.booth.pm/ ）のアバターワールドでも配布しています→ vrchat://launch?id=wrld_5bd7517c-a87a-42ac-a7e5-02e25e37ae9d（VRChatが起動します）\nVRMはVRoid Hub https://hub.vroid.com/characters/4374468319518135289/models/8591153281189114694 で配布中です\n\n2018/12/21 ver1.1\n・顔の法線を修正\n・Unity 2017に対応\n2018/11/19 ver1.0\n------------------------------------------------------------------------------\n\nフォルダ内容一覧\nlop.blend\nlop.fbx\nlop.unitypackage\nlop_body.png\nlop_body.psd\nlop_cloth.png\nlop_cloth.psd\nReadme_ja.txt\nReadme_en.txt\nTermOfUse_ja.txt\nTermOfUse_en.txt\n\n------------------------------------------------------------------------------\n\n・Unitypackageの動作環境はUnity 2017.4.15f1、VRCSDKはVRCSDK-2018.12.04.10.25_Publicで動作を確認しております。\n・Unitypackageのインポートの際、先にVRCSDKをインポートしておく必要があります。\n・フルトラッキング対応です。\n・Unitypackageにはみに(https://twitter.com/Mini_9321_VR)様の「まんまるシェーダーver1.4」の一部を同梱しています。\n\n------------------------------------------------------------------------------\n------------------------------------------------------------------------------\n・利用について\nVRChatのアバターとしての使用の他、動画配信、ゲーム・アニメーション・イラスト等の製作に営利・非営利を問わず利用することができます。\n\n・改変について\nモデルデータ及びテクスチャデータの改変は自由に行うことができます。\n\n・R-18・R-18Gへの利用について\n特に規制はありません。\n\n・禁止事項\n配布データについては改変の有無を問わず再配布を禁止します。\nまた特定個人・団体への中傷を目的とした利用を禁止します。\n\n・著作権について\n配布データ及び改変データの著作権は配布データの製作者 みきしぃ に帰属するものとします。\n配布データを利用した著作物の公開は自由に行うことができます。\n\n・免責事項\n配布データを用いたことによるいかなる損害についても製作者 みきしぃ は一切の責任を負わないものとします。\nこの利用規約は予告なく変更される場合があります。ご了承ください。\n\n------------------------------------------------------------------------------\n不明点・質問等ありましたら以下にご連絡ください。\nTwitter: @3405691582\nMail: m.myxomatosis@gmail.com\n","url":"https://booth.pm/ja/items/1097419","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/3187e7f6-be5b-4358-9f5b-a4b381a4d53a/i/1097419/18156915-0e02-40b7-a2f0-490833e52dba_base_resized.jpg"}
     </script>
@@ -116,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="PdqvjjnszPvENUegE5zWa7nbeDts//tJ8x3E+CvyX1w="></script>
+    nonce="glEFsAMHR9cPd36QsoxUkGiATpa3YFR+z9mdRYinZ+E="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -140,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -154,7 +153,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -195,7 +195,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1097419/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               100
@@ -210,14 +210,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1097419/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               100
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
