--- a/VRChat/69/1099269.html
+++ b/VRChat/69/1099269.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "vMEBIEOTg2TeSomK0snmamK+JNGsp9M71KFHuGOrK0c="></script>
+    "wI8rX3i8u1OoW+yK8qT0IAD5YRZL7NgZ59g8sP2b3Og="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"3Dモデルセット　ArmsPack.01","description":"□Arms Pack.01\n複数のモデルの詰め合わせです。\n\n\n\n□内容\n・xx.fbx　本体\n\n・xx.unitypackage　本体2\n\n・readme.txt これ\n\n\n\n□使用方法\n\nfbxデータやunitypackageを各種ソフトにインポートしてご利用下さい。\nunitypackageの場合、ファイルはAssets/weaponフォルダに作成されます。\n\n\n□設定等\n\n・B/O-22オービットシステム\n\n　飛行型の攻撃用自律ユニットです。\n\n\n・mk5マウントアーム\n\n　武装をマウントする為のアームです。\n\n\n・N300GL\n\n　N300ハンドキャノンのロングバレルモデルです。\n\n\n・NPL-244\n\n　火薬によって発射した弾頭をリニアシステムによって再加速する特殊拳銃です。\n\n\n\n\n\n□利用規約\n\n原則として再配布を禁じます。\n\nVRchat、改変、動画、同人、移植、商用などにどうぞ。\n\n\n\n\n\n□連絡先\n\nTwitter： @mabo_to_fu\nメール： stanag2324@gmail.com\n\n\n□更新履歴\n\n2018/11/20：販売開始","url":"https://booth.pm/ja/items/1099269","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/dd09d57d-ff0e-4d48-b34c-08c891168638/i/1099269/eb6a867b-ab58-4462-b936-dc338e55530b_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="vMEBIEOTg2TeSomK0snmamK+JNGsp9M71KFHuGOrK0c="></script>
+    nonce="wI8rX3i8u1OoW+yK8qT0IAD5YRZL7NgZ59g8sP2b3Og="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1099269/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               23
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1099269/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               23
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
