--- a/VRChat/40/1093540.html
+++ b/VRChat/40/1093540.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "dQfA0QWDY6dHle4ZsCtJQQiWm3mASYw7J/XM+/KJ/rk="></script>
+    "Q6aqiisZ07C2N0YoEUicYBRTb49vFt8pTQEBIzEFGF8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ぴょんぴょんリボン   【3Dモデル】","description":"★한국인분들 중 원화거래를 원하시면 트위터로 문의주세요\n\nVRchat向けのリボンのアクセサリです。\n\n二つのバージョンが入って、ポリゴン数　各356です。\nunitypackage・FBXファイルが入っていて、テクスチャやシェーダーはご自由に設定してください。\nあと、ボーンが適用されているのでDynamic boneなどを使って動きを入れることができます。\n\nデータを使用したSSをSNS等に上げると作者が喜びます。\n何か声をかけたい方はTwitterの「@eissi_VRC」にご連絡ください。\n\n\n\n私的利用に対してご自由にお使いください。\n商用利用一部可（動画・画像に関するもののみ許可）（データが含めてるモデルの配布禁止）\n\n当データの再配布・再販売は禁止します。\nまた、改変したデータを配布・販売するのも禁止します。\n規約は常に商品紹介文に記載されているものを最新の規約とします。\n当商品を購入、使用して発生したトラブル等に関して、当方は一切の責任を負いません。","url":"https://booth.pm/ja/items/1093540","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/2eb13332-c5d3-49a4-842a-6935478dd539/i/1093540/218ca685-94b0-41fe-8f39-d9efb6162649_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="dQfA0QWDY6dHle4ZsCtJQQiWm3mASYw7J/XM+/KJ/rk="></script>
+    nonce="Q6aqiisZ07C2N0YoEUicYBRTb49vFt8pTQEBIzEFGF8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -153,7 +155,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1093540/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               254
@@ -168,14 +170,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1093540/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               254
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
